--- a/desktop_css/desktop.css
+++ b/desktop_css/desktop.css
@@ -20,15 +20,15 @@ body {
 }
 body.pink {
     background: radial-gradient(at center, #ED48BA 0%, #ad2c84 100%);
-    transition: background 1s ease;
+    transition: opacity 1s ease;
 }
 body.yellow {
     background: radial-gradient(at center, #FBEC06 0%, #c7bd2c 100%);
     transition: background 1s ease;
 }
 body.white {
-    background: radial-gradient(at center, #fff 0%, rgb(241, 238, 238) 100%);
-    color: #000;
+    background: radial-gradient(at center, #B3D4E0 0%, rgb(173, 198, 207) 100%);
+    color: #2c3e50;
     transition: background 1s ease;
 }
 
@@ -39,47 +39,13 @@ aside {
     flex-direction: column;
     justify-content: space-between;
     padding: 2rem 1rem;
+    position: fixed;
 }
 
-/* improvised solution for the logo */
-#logo {
-    width: 2.7rem;
-    height: 2.7rem;
-    border-radius: 50%;
-    background-color: rgba(177, 41, 134, 0.8);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    place-items: center;
-    cursor: pointer;
+
+ellipse {
+    transform: scale(1.3);
 }
-#outer {
-    height: 1.5rem;
-    width: 1.5rem;
-    border-radius: 50%;
-    background-color: #B3D4E0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    place-items: center;
-}
-#inner {
-    height: 1rem;
-    width: 1rem;
-    border-radius: 50%;
-    background-color: rgba(177, 41, 134, 0.8);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    place-items: center;
-}
-#innermost {
-    height: 0.5rem;
-    width: 0.5rem;
-    border-radius: 50%;
-    background-color: #B3D4E0;
-}
-/* end of logo */
 
 .social-media i {
     display: block;
@@ -109,44 +75,39 @@ nav ul li:hover::after {
     border-bottom: hsl(0, 0%, 100%) solid 3px;
 }
 
+
 .container-1 {
-    padding: 0 5rem 0 8rem;
+    /* padding: 0 5rem 0 8rem; */
     display: flex;
 }
 #hero-product {
     width: 60%;
-    position: absolute;
-    top: 30%;
-    left: 5%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 3rem;
 }
 #skate-1 {
     /* image-rendering: optimizeQuality; */
     image-rendering: -webkit-optimize-contrast;
+    margin: 0 auto;
     height: 50vh;
-    position: absolute;
-    left: 10%;
     z-index: -1;
     transition: transform 1s ease;
 }
-#product-details {
-    width: 40%;
-}
-#hero-product p {
-    font-size: 3.5rem;
-    text-transform: uppercase;
-}
-#hero-product {
-    position: relative;
-    top: 3rem;
-}
+
 #hero-text{
     display: flex;
+    position: absolute;
+    margin-right: 11rem;
     flex-direction: column;
     width: 15rem;
     font-family: 'Jost', sans-serif;
     line-height: 3.5rem;
-
     transform: translate(10%, 250%);
+
+    font-size: 3.5rem;
+    text-transform: uppercase;
 }
 #hero-text p:first-child {
     align-self: flex-start;
@@ -154,6 +115,12 @@ nav ul li:hover::after {
 #hero-text p:nth-child(2){
     align-self: flex-end;
 }
+
+#product-details {
+    width: 40%;
+    margin-right: 5rem;
+}
+
 #title-header {
     display: flex;
     justify-content: space-between;
@@ -185,12 +152,16 @@ p a {
     margin: 0.5rem 0;
 }
 .colours-tab, .size{
-    width: 55%;
+    /* max-width: 70%; */
     display: flex;
     justify-content: space-between;
     margin-bottom: 1.2rem;
     text-transform: uppercase;
     place-items: center;
+    padding-right: 4rem;
+}
+.colours-tab p {
+    /* margin-right: 3rem; */
 }
 .colours div {
     height: 1.5rem;
@@ -251,3 +222,106 @@ button:hover {
 }
 
 /* you can delete the styles that you consider redundant. I'm sending this now because time is running out - sigh */
+
+@media screen and (max-width: 976px) {    
+    nav ul, small, .colours-tab p {
+        display: none;
+    }
+
+    nav, .container-1 {
+        padding: 2.5rem 3rem;
+        margin-left: 2rem;
+    }
+    
+    #hamburger, #product-details {
+        cursor: pointer;
+        margin-left: 2rem;
+    }
+    
+    #hamburger span {
+        width: 26px;
+        height: 3px;
+        background-color: #fff;
+        display: block ;
+        margin: 7px 0;
+
+        color: var(--dark-grey);
+        cursor: pointer;
+        transition: transform 0.3s ease-out;
+    }        
+    
+    #hamburger span:first-of-type {
+        width: 35px;
+    }
+
+    #hamburger.cancel span:first-child {
+        width: 26px;
+        transform: translateY(5px) rotate(45deg);
+    }
+    #hamburger.cancel span:last-child {
+        width: 26px;
+        transform: translateY(-5px) rotate(-45deg);
+    }
+    
+    .container-1 {
+        flex-direction: column;
+    }
+    #hero-product, #product-details {
+        top: 0;
+        padding: 2rem;
+        width: 100%;
+    }
+    #product-details {
+        padding: 5rem 0;
+    }
+    #hero-text {
+        margin: 0;
+        /* top: 30%; */
+    }
+    .colours-tab {
+        position: absolute;
+        top: 35%;
+        right: 5%;
+        padding: 0;
+        margin: 0;
+    }        
+    .colours div {
+        display: flex;
+        border-radius: 30%;
+        margin: 1rem 0;
+        /* flex-direction: column; */
+    }
+    button {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    aside {
+        display: none;
+    }
+
+    nav {
+        padding: 2rem;
+    }
+    nav, .container-1, #hamburger {
+        margin-left: 0;
+    }    
+    #product-details {
+        margin: 0;
+    }
+    .container-1 {
+        padding: 2.5rem 2rem;
+    }
+    #skate-1 {
+        height: auto;
+        width: 60vw;
+    }
+    #hero-text{
+        font-size: 12vw;
+        top: 70vw;
+        line-height: 1;
+        width: 55vw;
+        transform: translateX(5%);
+    }
+}    
